<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RSSReader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">RSS reader</string>
    <string name="title">name</string>
    <string name="quantity">quantity</string>
    <string name="link">xml link</string>
    <string name="description">description</string>
    <string name="fetch">Parse it!</string>
</resources>
